Renaming src/old para old_src

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "exclude": [
         "node_modules",
-        "src/old",
+        "old_src",
         "tests/old",
         "olddev"
     ]
