--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "exclude": [
         "node_modules",
-        "old_src",
+        "old_files",
         "tests/old",
         "olddev"
     ]
