Mais clareza no código traduzindo varíaveis e comentários para o portugues, melhorando a inicialização de biases aleatórios para ficar mais explicito, e melhorando a tipagem de dados pra ficar mais explicita, e nova funcionalidade para controlar se vamos ou não usar o Bias

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ tests/classificacao/test
 tests/classificacao/test/*
 tests/classificacao/test2
 tests/classificacao/test2/*
+tests/classificacao/test3
+tests/classificacao/test3/*
 ./dev/notes.txt
 dev/notes.txt
